# micropython-stubber

./: .actrc  .all-contributorsrc  .codecov.yml  .coveragerc  .env  .exclusions  .gitignore  .gitmodules  .libcst.codemod.yaml  .mailmap  .pylintrc  .pylintrc-cpython  .pylintrc-mpy  .pytest.report.json  .readthedocs.yaml  .sourcery.yaml  LICENSE  Manual stub build chain.ipynb  SUBMODULES.MD  WIP.md  all-stubs  azure-pipelines.yml  board_id.ipynb  board_info.csv  board_info.json  boot.py  build_sa_ports.py  bulk_stubber.json  changelog.md  createstubs.py  cspell.json  dependabot.yml  enrich_tester.ipynb  firmwares.py  justfile  lgtm.yml  main.py  make.ps1  mpy_v5.json  mpy_v6.json  (+34 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.githooks/: install  pre-commit
.github/: CODEOWNERS  FUNDING.yml  codecov.yml  codeql-config.yml  copilot-instructions.md  dependabot.yml  docs.agent.md  release-drafter.yml
M5Stack/: boot.py  config.json  config.py  createstubs.py  debug.py  flow.py  flow_usb.py  main.py
board/: boot.py  createstubs.py  createstubs_db.py  createstubs_mem.py  logging.py  main.py  mini.mpy  modulelist.txt  pymakr.conf  pyrightconfig.json  reentry.py  stub_lvgl.py
data/: M5Stackflow_esp32_1_4-beta.txt  lobo_3_2_4.txt  logo_ev3.txt  micropython-allports.txt  micropython-lib.txt  micropython-v1_10-esp32.txt  micropython-v1_11-esp8622.txt  micropython-v1_14-esp32.txt  micropython-v1_16-esp32.txt  micropython-v1_17-esp32.txt  micropython-v1_17-lvlg-esp32.txt  micropython-v1_17-pyb11_thread.txt  micropython-v1_18-esp32.txt  micropython-v1_18-pyb11.txt  micropython-v1_19_1-esp32.txt  micropython-v1_19_1-rp2-Arduino_nano_RP2040_connect.txt  micropython-v1_19_1-samd.txt  micropython-v1_19_1-stm32.txt  micropython-v1_20_0-unix.txt  micropython-v1_20_1-esp32-beta.txt  micropython-v1_21_0-espnow.txt  micropython-v1_22_0-webassembly.txt  micropython-v1_22_2-esp32c3.txt  micropython-v1_23_0_releasenotes.txt  micropython-v1_24_1-webassembly-pyscript.txt  micropython-v1_25_0_PRs.txt  micropython-v2_0_0-preview.txt  micropython_esp32_1_13.txt  micropython_esp32_1_15.txt  micropython_extras.txt  micropython_pyb11_1_13.txt  micropython_tags.txt  micropython_v1_18-rp2040_connect.txt  micropython_v1_22_0_rpi_pico_w.txt  module_list.py  pico-lipo.txt  pyb.txt  pycom-LopPy4.txt  pycom-extra.txt  pycom-v1_20_0-wipi.txt  (+6 more)
docs/: 00_intro.md  01_.md  02_.md  03_.md  04_.md  05_.md  05_quick_start.md  10_approach.md  15_cli.rst  20_creating.md  20_using.md  25_custom_micropython.md  30_vscode.md  40_firmware_stubs.md  42_using_createstubs.md  45_createstubs.md  50_frozen_stubs.md  55_doc_stubs.md  60_repos.md  62_codemods.md  65_bulk_stubber.md  65_scripts.md  70_stub_overview.md  80_references.md  90_documentation.md  95_glossary.md  README_stdlib_docstrings.md  changelog.md  conf.py  developing.md  doc_deps.ps1  implementation_guide_stdlib_docstrings.md  implementation_progress_stdlib_docstrings.md  index.md  intro.md  publish.md  readme.md  requirements-docs.txt  requirements-export.txt  research_stdlib_docstrings.md  (+5 more)
minified/: createstubs.mpy  createstubs.py  createstubs_db.mpy  createstubs_db.py  createstubs_mem.mpy  createstubs_mem.py  main.py  mini.mpy  modulelist.db  modulelist.txt  pymakr.conf  pyrightconfig.json
modules/mp_downloader/: README.md  pyproject.toml
modules/mp_downloader/mp_downloader/: __main__.py  common.py  downloader.py  flash_esp.py  flash_stm32.py  flash_uf2_linux.py  flash_uf2_windows.py  flasher.py  uf2_boardid.py
modules/mp_downloader/tests/: test_sort.py
src/mpflash/: LICENSE  README.md  basicgit.py  coverage-mpflash.xml  libusb_flash.ipynb  pyproject.toml  stm32_permissions.md  stm32_udev_rules.md
src/mpflash/mpflash/: add_firmware.py  ask_input.py  basic.py  basicgit.py  bootloader.py  cli_download.py  cli_flash.py  cli_group.py  cli_list.py  cli_main.py  common.py  config.py  connected.py  download.py  download_input.py  downloaded.py  downloader.py  errors.py  flash.py  flash_esp.py  flash_stm32.py  flash_stm32_cube.py  flash_stm32_dfu.py  flash_uf2.py  flash_uf2_linux.py  flash_uf2_macos.py  flash_uf2_windows.py  flasher.py  inq.py  list.py  logger.py  uf2_boardid.py  versions.py  worklist.py
src/mpflash/mpflash/bootloader/: __init__.py  activate.py  detect.py  manual.py  micropython.py  touch1200.py
src/mpflash/mpflash/flash/: __init__.py  esp.py  stm32.py  stm32_dfu.py  worklist.py
src/mpflash/mpflash/flash/uf2/: __init__.py  boardid.py  linux.py  macos.py  uf2disk.py  windows.py
src/mpflash/mpflash/mpboard_id/: __init__.py  add_boards.py  api.py  board.py  board_id.py  board_info.csv  board_info.json  get_boardnames.py  store.py
src/mpflash/mpflash/mpremoteboard/: __init__.py  mpremoteboard.py  mpy_fw_info.py  runner.py
src/mpflash/mpflash/uf2/: README.MD  pico_nuke_RPI_PICO.uf2  pico_nuke_RPI_PICO_W.uf2  pico_nuke_arduino_nano_rp2040_connect.uf2  pico_nuke_pimoroni_picolipo_16mb-1.1.uf2
src/mpflash/tests/: conftest.py  test_ask_input.py  test_cli_mpflash.py  test_download.py  test_downloaded.py  test_downloaded_sort.py  test_filtered_comports.py  test_flash_1.py  test_list.py  test_mp_board_filter.py  test_some_boards.py  test_sort.py
src/mpflash/tests/cli/: test_cli_download.py  test_cli_flash.py  test_cli_list.py  test_cli_options.py
src/mpflash/tests/data/firmware/: firmware.jsonl
src/mpflash/tests/data/firmware/rp2/: ARDUINO_NANO_RP2040_CONNECT-v1.22.2.uf2  ARDUINO_NANO_RP2040_CONNECT-v1.23.0-preview.236.uf2  RPI_PICO_W-v1.22.2.uf2  RPI_PICO_W-v1.23.0-preview.236.uf2
src/mpflash/tests/data/firmware/samd/: SEEED_WIO_TERMINAL-v1.22.2.uf2  SEEED_WIO_TERMINAL-v1.23.0-preview.236.uf2
src/mpflash/tests/mpboard_id/: test_api.py  test_find_board.py  test_find_board_id.py
src/mpflash/tests/mpremoteboard/: test_mprb.py
src/mptool/: pyproject.toml
src/mptool/mptool/: cli_group.py  cli_main.py  common.py  config.py  downloader.py  flash_esp.py  flash_stm32.py  flash_uf2.py  flash_uf2_linux.py  flasher.py  list.py  logger.py
tests/publish/data/template/: LICENSE.md  README.md  pyproject.toml  pyproject_hatch.toml
(+2467 files in other folders)
