[tool.poetry]
name = "mpflash"
version = "0.4.0.post3"
description = "Flash and download tool for MicroPython firmwares"
authors = ["Jos Verlinde <jos_verlinde@hotmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["MicroPython", "firmware", "flash", "download", "UF2", "esptool"]
homepage = "https://github.com/Josverl/micropython-stubber/blob/main/src/mpflash/README.md"
repository = "https://github.com/Josverl/micropython-stubber"
classifiers = [
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.scripts]
mpflash = "mpflash.cli_main:mpflash"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
esptool = "^4.7.0"
jsonlines = "^4.0.0"
bincopy = "^20.0.0"
strip-ansi = "^0.1.1"
rich-click = "^1.7.3"
psutil = "^5.9.8"
blkinfo = "^0.2.0"
pygithub = "^2.1.1"
platformdirs = "^4.2.0"
pyusb = "^1.2.1"
packaging = "23.2"
tenacity = "8.2.3"
mpremote = "^1.22.0"
inquirer = "^3.2.4"
libusb = {version = "^1.0.27", platform = "win32"}

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
