[project]
name = "template"
description = "template"
version = "0.1.0"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jos Verlinde", email = "josverl@users.noreply.github.com" },
]

classifiers = [
    "Typing :: Stubs Only",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Natural Language :: English",
]
# dependencies are updated from the template during build
dependencies = ["micropython-stdlib-stubs  >=1.24.0"]

[project.urls]
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
repository = "https://github.com/josverl/micropython-stubs"



[tool.poetry]
exclude = ["*.ps1", "*.py", "**/__pycache__", "**/dist"]
include = ["**/*.py", "**/*.pyi"]

# Note: anything excluded in .gitignore is not packaged by poetry 
packages = []


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
